--- a/codigo/Sprint 2 e 3 Sofia/json-server/public/doacao.html
+++ b/codigo/Sprint 2 e 3 Sofia/json-server/public/doacao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSBH</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/telasSofia.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -24,7 +24,7 @@
                 <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
                 <li class="mItem" id="m4"><a href="#"><button>Entrar</button></a></li>
                 <li class="mItem" id="m5"><a href="#"><button>Cadastre-se</button></a></li>
-                <li class="mItem" id="m6"><a href="index.html">Vagas de Voluntariado</a></li>
+                <li class="mItem" id="m6"><a href="voluntariado.html">Vagas de Voluntariado</a></li>
                 <li class="mItem" id="m7"><a href="doacao.html">Doação de Materiais</a></li>
                 <li class="mItem" id="m8"><a href="financeira.html">Contribuição Financeira</a></li>
                 <li class="bar"></li>
@@ -107,7 +107,7 @@
 
     </footer>
 
-    <script src="assets/script/script2.js"></script>
+    <script src="assets/script/doacao.js"></script>
     
 </body>
 
