--- a/codigo/Sprint2e3Sofia/json-server/public/financeira.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/financeira.html
@@ -24,7 +24,7 @@
                 <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
                 <li class="mItem" id="m4"><a href="#"><button>Entrar</button></a></li>
                 <li class="mItem" id="m5"><a href="#"><button>Cadastre-se</button></a></li>
-                <li class="mItem" id="m6"><a href="voluntariado.html">Vagas de Voluntariado</a></li>
+                <li class="mItem" id="m6"><a href="index.html">Vagas de Voluntariado</a></li>
                 <li class="mItem" id="m7"><a href="doacao.html">Doação de Materiais</a></li>
                 <li class="mItem" id="m8"><a href="financeira.html">Contribuição Financeira</a></li>
                 <li class="bar"></li>
