--- a/codigo/Sprint2e3Sofia/json-server/public/index.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/index.html
@@ -18,17 +18,25 @@
 
     <header>
         <nav class="header">
+            <a href="#" id="logoMobile"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a>
+            <div id="secoesMenu">
+            <input type="checkbox" id="menuTuggle">
+            <label for="menuTuggle" class="menu-icon">
+               <i class="fa-solid fa-bars"></i>
+               <i class="fa-solid fa-circle-xmark"></i>
+            </label>
             <ul class="menu">
                 <li class="mItem" id="m1"><a href="#">Central de Ajuda</a></li>
                 <li class="mItem" id="m2"><a href="#">Torne-se um Anfitrião</a></li>
                 <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
                 <li class="mItem" id="m4"><a href="#"><button>Entrar</button></a></li>
                 <li class="mItem" id="m5"><a href="#"><button>Cadastre-se</button></a></li>
-                <li class="mItem" id="m6"><a href="voluntariado.html">Vagas de Voluntariado</a></li>
+                <li class="mItem" id="m6"><a href="index.html">Vagas de Voluntariado</a></li>
                 <li class="mItem" id="m7"><a href="doacao.html">Doação de Materiais</a></li>
                 <li class="mItem" id="m8"><a href="financeira.html">Contribuição Financeira</a></li>
                 <li class="bar"></li>
             </ul>
+            </div>
         </nav>
     </header>
 
