Menu mobile e para Ipad e filtros responsivos mobile e ipad

--- a/codigo/Sprint2e3Sofia/json-server/public/index.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/index.html
@@ -29,8 +29,8 @@
                 <li class="mItem" id="m1"><a href="#">Central de Ajuda</a></li>
                 <li class="mItem" id="m2"><a href="#">Torne-se um Anfitrião</a></li>
                 <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
-                <li class="mItem" id="m4"><a href="#"><button>Entrar</button></a></li>
-                <li class="mItem" id="m5"><a href="#"><button>Cadastre-se</button></a></li>
+                <li class="mItem" id="m4"><a href="#">Entrar</a></li>
+                <li class="mItem" id="m5"><a href="#">Cadastre-se</a></li>
                 <li class="mItem" id="m6"><a href="index.html">Vagas de Voluntariado</a></li>
                 <li class="mItem" id="m7"><a href="doacao.html">Doação de Materiais</a></li>
                 <li class="mItem" id="m8"><a href="financeira.html">Contribuição Financeira</a></li>
@@ -101,7 +101,7 @@
                     <div class="card">
                         <h3 class="projtitulo"></h3>
                         <div class="conteudo">
-                            <img src="" alt="Imagem do projeto" class="projimagem" width="30%">
+                            <img src="" alt="Imagem do projeto" class="projimagem">
                             <div class="texto">
                                 <p class="anfitriao"></p>
                                 <p class="temas"></p>
@@ -119,7 +119,7 @@
     </main>
 
     <footer>
-
+        <p>@ 2024 CSBH - PUC | Todos os direitos reservados</p>
     </footer>
 
     <script src="assets/script/voluntariado.js"></script>
