--- a/codigo/Sprint2e3Sofia/json-server/public/doacao.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/doacao.html
@@ -18,17 +18,25 @@
 
     <header>
         <nav class="header">
+            <a href="#" id="logoMobile"><img id="logo" src="assets/imagens/Conexão Solidária Logo-3.png" width="200px"></a>
+            <div id="secoesMenu">
+            <input type="checkbox" id="menuTuggle">
+            <label for="menuTuggle" class="menu-icon">
+               <i class="fa-solid fa-bars"></i>
+               <i class="fa-solid fa-circle-xmark"></i>
+            </label>
             <ul class="menu">
                 <li class="mItem" id="m1"><a href="#">Central de Ajuda</a></li>
                 <li class="mItem" id="m2"><a href="#">Torne-se um Anfitrião</a></li>
                 <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
-                <li class="mItem" id="m4"><a href="#"><button>Entrar</button></a></li>
-                <li class="mItem" id="m5"><a href="#"><button>Cadastre-se</button></a></li>
+                <li class="mItem" id="m4"><a href="#">Entrar</a></li>
+                <li class="mItem" id="m5"><a href="#">Cadastre-se</a></li>
                 <li class="mItem" id="m6"><a href="index.html">Vagas de Voluntariado</a></li>
                 <li class="mItem" id="m7"><a href="doacao.html">Doação de Materiais</a></li>
                 <li class="mItem" id="m8"><a href="financeira.html">Contribuição Financeira</a></li>
                 <li class="bar"></li>
             </ul>
+            </div>
         </nav>
     </header>
 
@@ -37,7 +45,13 @@
 
         <nav class="buscaEFiltros">
             <input type="search" id="search" placeholder="Buscar">
-            <div class="filtroContainer">
+            <input type="checkbox" id="filtroTuggle">
+            <label for="filtroTuggle" class="filtro-icon">
+                <i class="fa-solid fa-filter"></i>
+                <i class="fa-solid fa-circle-xmark"></i>
+            </label>
+            <div id="filters">
+            <div class="filtroContainer topo">
                 <h6 class="tituloFiltro">Tema:</h6>
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t1" value="Idosos"><p class="legenda">Idosos</p></div>
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t2" value="Animais"><p class="legenda">Animais</p></div>
@@ -75,6 +89,7 @@
                 <div class="filtro"><input class="periodoInput" type="checkbox" id="p2" value="Tarde"><p class="legenda">Tarde</p></div>
                 <div class="filtro"><input class="periodoInput" type="checkbox" id="p3" value="Noite"><p class="legenda">Noite</p></div>
             </div>
+            </div>
         </nav>
         <section class="cards">
 
@@ -104,7 +119,7 @@
     </main>
 
     <footer>
-
+      <p>@ 2024 CSBH - PUC | Todos os direitos reservados</p>
     </footer>
 
     <script src="assets/script/doacao.js"></script>
