--- a/codigo/Sprint2e3Sofia/json-server/public/financeira.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/financeira.html
@@ -28,10 +28,10 @@
             <ul class="menu">
                 <li class="mItem" id="m1"><a href="#">Central de Ajuda</a></li>
                 <li class="mItem" id="m2"><a href="#">Torne-se um Anfitrião</a></li>
-                <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
+                <li class="mItem" id="m3"><a href="index.html"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
                 <li class="mItem" id="m4"><a href="#">Entrar</a></li>
                 <li class="mItem" id="m5"><a href="#">Cadastre-se</a></li>
-                <li class="mItem" id="m6"><a href="index.html">Vagas de Voluntariado</a></li>
+                <li class="mItem" id="m6"><a href="voluntariado.html">Vagas de Voluntariado</a></li>
                 <li class="mItem" id="m7"><a href="doacao.html">Doação de Materiais</a></li>
                 <li class="mItem" id="m8"><a href="financeira.html">Contribuição Financeira</a></li>
                 <li class="bar"></li>
