--- a/codigo/MenuLogado/index.html
+++ b/codigo/MenuLogado/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSBH</title>
-    <link rel="stylesheet" href="assets/css/telaInicial.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -19,21 +19,43 @@
     <header>
         <nav class="header">
             <a href="#" id="logoMobile"><img id="logo" src="assets/imagens/Conexão Solidária Logo-3.png" width="200px"></a>
+            <input type="checkbox" id="perfilMobile" style="display: none;">
+                        <label for="perfilMobile" class="perfilMobile-icon">
+                            <img id="fotoDePerfil" src="assets/imagens/perfil.png" width="40px">
+                        </label>
+                        <ul id="menuPerfil">
+                            <li class="mpItem" id="mp1"><a href="#">Configurações</a></li>
+                            <li class="mpItem" id="mp2"><a href="#">Favoritos</li>
+                            <li class="mpItem" id="mp3"><a href="#">Meus Projetos</a></li>
+                            <li class="mpItem" id="mp4"><a href="#">Sair</a></li>
+                        </ul>
             <div id="secoesMenu">
-            <input type="checkbox" id="menuTuggle">
-            <label for="menuTuggle" class="menu-icon">
-               <i class="fa-solid fa-bars"></i>
-               <i class="fa-solid fa-circle-xmark"></i>
-            </label>
-            <ul class="menu">
-                <li class="mItem" id="m1"><a href="#">Central de Ajuda</a></li>
-                <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
-                <li class="mItem" id="m9"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
-                <li class="mItem" id="m6"><a href="#">Vagas de Voluntariado</a></li>
-                <li class="mItem" id="m7"><a href="#">Doação de Materiais</a></li>
-                <li class="mItem" id="m8"><a href="#">Contribuição Financeira</a></li>
-                <li class="bar"></li>
-            </ul>
+                <input type="checkbox" id="menuTuggle">
+                <label for="menuTuggle" class="menu-icon">
+                    <i class="fa-solid fa-bars"></i>
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </label>
+                <ul class="menu">
+                    <li class="mItem" id="m1"><a href="#">Central de Ajuda</a></li>
+                    <li class="mItem" id="m3"><a href="#"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
+                    <li class="mItem" id="m9">
+                        <input type="checkbox" id="perfil" style="display: none;">
+                        <label for="perfil" class="perfil-icon">
+                            <img src="assets/imagens/perfil.png" width="40px">
+                        </label>
+                        <ul id="menuPerfil">
+                            <li class="mpItem" id="mp1"><a href="#">Configurações</a></li>
+                            <li class="mpItem" id="mp2"><a href="#">Favoritos</li>
+                            <li class="mpItem" id="mp3"><a href="#">Meus Projetos</a></li>
+                            <li class="mpItem" id="mp4"><a href="#">Sair</a></li>
+                        </ul>
+                    </li>
+                    <li class="mItem" id="m6"><a href="#">Vagas de Voluntariado</a></li>
+                    <li class="mItem" id="m7"><a href="#">Doação de Materiais</a></li>
+                    <li class="mItem" id="m8"><a href="#">Contribuição Financeira</a></li>
+                    <li class="bar"></li>
+                </ul>
             </div>
         </nav>
     </header>
+
