--- a/codigo/Sprint2e3Sofia/json-server/public/index.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/index.html
@@ -18,7 +18,7 @@
 
     <header>
         <nav class="header">
-            <a href="#" id="logoMobile"><img id="logo" src="assets/imagens/Conexão Solidária Logo-3.png" width="200px"></a>
+            <a href="index.html" id="logoMobile"><img id="logo" src="assets/imagens/Conexão Solidária Logo-3.png" width="200px"></a>
             <div id="secoesMenu">
             <input type="checkbox" id="menuTuggle">
             <label for="menuTuggle" class="menu-icon">
@@ -26,7 +26,7 @@
                <i class="fa-solid fa-circle-xmark"></i>
             </label>
             <ul class="menu">
-                <li class="mItem" id="m1"><a href="#">Central de Ajuda</a></li>
+                <li class="mItem" id="m1"><a href="duvidasFrequentes.html">Central de Ajuda</a></li>
                 <li class="mItem" id="m2"><a href="#">Torne-se um Anfitrião</a></li>
                 <li class="mItem" id="m3"><a href="index.html"><img src="assets/imagens/Conexão Solidária Logo-3.png" width="150px"></a></li>
                 <li class="mItem" id="m4"><a href="#">Entrar</a></li>
