botoes ajudou e nao ajudou

--- a/codigo/Sprint2e3Sofia/json-server/public/duvidasFrequentes.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/duvidasFrequentes.html
@@ -49,6 +49,8 @@
             </div>
             <div class="card-body">
               <p class="card-text"></p> 
+              <button class="btn" id="ajudou">Ajudou</button>
+              <button class="btn" id="NaoAjudou">Não Ajudou</button>
             </div>
           </div>
         </div>
