--- a/codigo/Sprint2e3Sofia/json-server/public/cardVolunt.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/cardVolunt.html
@@ -47,7 +47,7 @@
         </div>
           <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
 
-          <script src="map.js"></script>
+          <script src="assets/script/map.js"></script>
     </main> 
 
     <footer>
