formulários funcionando, tela dos cards, tela meus projetos anfitrião

--- a/codigo/Sprint2e3Sofia/json-server/public/voluntariado.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/voluntariado.html
@@ -80,7 +80,7 @@
 
             <!-- Template do card -->
             <template id="card-template">
-                <a href="cardVolunt.html?id=${volunt.id}" class="card-link">
+                <a class="card-link">
                     <div class="card">
                         <h3 class="projtitulo"></h3>
                         <div class="conteudo">
