--- a/codigo/Sprint2e3Sofia/json-server/public/cardVolunt.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/cardVolunt.html
@@ -1,68 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSBH</title>
-    <link rel="stylesheet" href="assets/css/telaCard.css">
-    <link href="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/276a778de7.js" crossorigin="anonymous"></script>
-    <style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSBH</title>
+  <link rel="stylesheet" href="assets/css/telaCard.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/276a778de7.js" crossorigin="anonymous"></script>
+  <style>
       #pagina {
         display: none; /* Esconde a página até que esteja carregada */
       }
     </style>
 </head>
-
-
 <body id="pagina">
 
     <header id="cabecalho"></header>
 
     <main>
-        <h2 class="titulo"></h2>
+        <h2 class="titulo" id="titulo"></h2>
         <img id="imagem">
         <div class="texto">
-          <p id="anfitriao"></p>
-          <p id="infoAnfitriao"></p>
-          <button class="btn" id="btnFav">Saiba Mais</button>
+            <p id="anfitriao"></p>
+            <p id="infoAnfitriao"></p>
+            <button class="btn" id="btnFav">Favoritar</button>
         </div>
         <div id="maisInfo">
-          <p id="descricao"></p>
-          <p id="horario"></p>
-          <p id="dias"></p>
-          <p id="localizacao"></p>
+            <p id="descricao"></p>
+            <p id="horario"></p>
+            <p id="dias"></p>
+            <p id="localizacao"></p>
         </div>
-        <div class="container">
-          <div id="map"></div>
-             <div class="map-overlay">
-                 <input type="text" id="search" placeholder="Search...">
-              </div>
-        </div>
-          <script src="https://api.mapbox.com/mapbox-gl-js/v2.8.2/mapbox-gl.js"></script>
-
-          <script src="assets/script/map.js"></script>
-    </main> 
+    </main>
 
     <footer>
         <p>@ 2024 CSBH - PUC | Todos os direitos reservados</p>
     </footer>
 
     <script src="assets/script/geral.js"></script>
-
+    
     <script src="assets/script/card.js"></script>
 
     <script>
-      window.addEventListener('load', function() {
-        document.getElementById('pagina').style.display = 'grid';
-     });
+        window.addEventListener('load', function () {
+            document.getElementById('pagina').style.display = 'grid';
+        });
     </script>
 </body>
-
 </html>
