--- a/codigo/Sprint2e3Sofia/json-server/public/cardFinanceiro.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/cardFinanceiro.html
@@ -32,9 +32,7 @@
         </div>
         <div id="maisInfo">
             <p id="descricao"></p>
-            <p id="horario"></p>
-            <p id="dias"></p>
-            <p id="localizacao"></p>
+            <p id="infoBancarias"></p>
         </div>
     </main>
 
@@ -44,7 +42,7 @@
 
     <script src="assets/script/geral.js"></script>
     
-    <script src="assets/script/cardVolunt.js"></script>
+    <script src="assets/script/cardFinanceiro.js"></script>
 
     <script>
         window.addEventListener('load', function () {
