--- a/codigo/Sprint2e3Sofia/json-server/public/doacao.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/doacao.html
@@ -41,8 +41,8 @@
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t3" value="Hospitais"><p class="legenda">Hospitais</p></div>
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t4" value="Crianças"><p class="legenda">Crianças</p></div>
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t5" value="Pessoas e famílias necessitadas"><p class="legenda">Pessoas e famílias necessitadas</p></div>
-                <div class="filtro"><input class="temaInput" type="checkbox" id="t6" value="Meio ambiente"><p class="legenda">Meio ambiente</p></div>
-                <div class="filtro"><input class="temaInput" type="checkbox" id="t7" value="Educação"><p class="legenda">Educação</p></div>
+                <div class="filtro"><input class="temaInput" type="checkbox" id="t6" value="Ambientais"><p class="legenda">Meio ambiente</p></div>
+                <div class="filtro"><input class="temaInput" type="checkbox" id="t7" value="Educacionais"><p class="legenda">Educação</p></div>
             </div>
             <div class="filtroContainer">
                 <h6 class="tituloFiltro">Local:</h6>
@@ -54,7 +54,7 @@
                 <div class="filtro"><input class="localInput" type="checkbox" id="l6" value="Região Norte"><p class="legenda">Região Norte</p></div>
                 <div class="filtro"><input class="localInput" type="checkbox" id="l7" value="Região Oeste"><p class="legenda">Região Oeste</p></div>
                 <div class="filtro"><input class="localInput" type="checkbox" id="l8" value="Região Pampulha"><p class="legenda">Região Pampulha</p></div>
-                <div class="filtro"><input class="localInput" type="checkbox" id="l9" value="Região Venda Nova"><p class="legenda">Região Venda Nova</p></div>
+                <div class="filtro"><input class="localInput" type="checkbox" id="l9" value="Venda Nova"><p class="legenda">Região Venda Nova</p></div>
             </div>
             <div class="filtroContainer">
                 <h6 class="tituloFiltro">Dia:</h6>
