--- a/codigo/Sprint2e3Sofia/json-server/public/favoritos.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/favoritos.html
@@ -26,6 +26,7 @@
 
     <main>
         <h2 class="titulo">Favoritos</h2>
+        <div id="semCards" style="display: none;">Você ainda não possui nenhum projeto<br>favorito</div>
         <section class="cards">
 
             <div id="cards-container"></div>
