--- a/codigo/Sprint2e3Sofia/json-server/public/financeira.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/financeira.html
@@ -41,8 +41,8 @@
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t3" value="Hospitais"><p class="legenda">Hospitais</p></div>
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t4" value="Crianças"><p class="legenda">Crianças</p></div>
                 <div class="filtro"><input class="temaInput" type="checkbox" id="t5" value="Pessoas e famílias necessitadas"><p class="legenda">Pessoas e famílias necessitadas</p></div>
-                <div class="filtro"><input class="temaInput" type="checkbox" id="t6" value="Meio ambiente"><p class="legenda">Meio ambiente</p></div>
-                <div class="filtro"><input class="temaInput" type="checkbox" id="t7" value="Educação"><p class="legenda">Educação</p></div>
+                <div class="filtro"><input class="temaInput" type="checkbox" id="t6" value="Ambientais"><p class="legenda">Meio ambiente</p></div>
+                <div class="filtro"><input class="temaInput" type="checkbox" id="t7" value="Educacionais"><p class="legenda">Educação</p></div>
             </div>
             </div>
         </nav>
