--- a/codigo/Sprint2e3Sofia/json-server/public/meusProjsAnfitriao.html
+++ b/codigo/Sprint2e3Sofia/json-server/public/meusProjsAnfitriao.html
@@ -26,6 +26,7 @@
 
     <main>
         <h2 class="titulo">Projetos fornecidos por você</h2>
+        <div id="semCards" style="display: none;">Você ainda não possui nenhum projeto<br>cadastrado</div>
         <section class="cards">
 
             <div id="cards-container"></div>
